simplify. (#56)